<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView android:text="@string/destino" />

        <EditText
            android:id="@+id/destino"
            android:inputType="text" />

        <TextView android:text="@string/tipo_da_viagem" />

        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal"
            android:weightSum="2" >

            <RadioButton
                android:id="@+id/lazer"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/lazer" />

            <RadioButton
                android:id="@+id/negacios"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/negocios" />
        </RadioGroup>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/data_da_chegada" />

            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/data_da_saida" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <Button
                android:id="@+id/dataChegada"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="selecionarData"
                android:text="@string/selecione" />

            <Button
                android:id="@+id/dataSaida"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="selecionarData"
                android:text="@string/selecione" />
        </TableRow>

        <TextView android:text="@string/orcamento" />

        <EditText
            android:id="@+id/orcamento"
            android:digits="1234567890.,"
            android:inputType="number|numberDecimal" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/quantidade_de_pessoas" />

            <EditText
                android:id="@+id/quantidadePessoas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number" />
        </TableRow>

        <Button
            android:onClick="salvarViagem"
            android:text="@string/salvar" />
    </TableLayout>

</ScrollView>